# jot

./: .gitignore  Makefile.am  README.md  configure.ac  jot.1  jot.c
